Redesign HUD with fixed positioning and better styling
- Use CSS grid layout: turn indicator | timer | wind+zoom
- Timer now has fixed width (120px) so number changes don't shift layout
- Added glass effect to wind and zoom indicators
- Added direction arrows to wind bar
- Grouped right-side elements (wind, zoom, mute) together
- Better typography and shadows
- Wind feature is working (affects projectiles in Physics.js)

--- a/index.html
+++ b/index.html
@@ -156,18 +156,27 @@
 
         <!-- HUD Overlay -->
         <div id="hud">
+            <!-- Left: Turn Indicator -->
             <div id="turn-indicator">
                 <span id="current-team">Red Team</span>'s Turn
             </div>
+
+            <!-- Center: Timer -->
             <div id="turn-timer">30</div>
-            <div id="wind-indicator">
-                <span class="wind-label">Wind:</span>
-                <div class="wind-bar">
-                    <div id="wind-arrow"></div>
+
+            <!-- Right: Wind, Zoom, Mute -->
+            <div class="hud-right">
+                <div id="wind-indicator">
+                    <span class="wind-label">Wind</span>
+                    <div class="wind-bar">
+                        <div id="wind-arrow"></div>
+                    </div>
                 </div>
+                <div id="zoom-indicator">
+                    <span id="zoom-level">100%</span>
+                </div>
+                <button id="mute-toggle" class="hud-btn" title="Toggle Sound">🔊</button>
             </div>
-            <div id="zoom-indicator">Zoom: <span id="zoom-level">100%</span></div>
-            <button id="mute-toggle" class="hud-btn" title="Toggle Sound">🔊</button>
         </div>
 
         <!-- Weapon Selector -->
