Redesign wind meter + add turn logic debugging
Wind meter changes:
- New visual design with center marker
- Left wind = green, Right wind = red
- Shows numeric value with direction arrow
- Better visual feedback

Turn logic:
- Added debug logging to track turn transitions
- Fixed selectNextKoala to not recursively call nextTeam
- Added safety checks for dead teams

--- a/index.html
+++ b/index.html
@@ -167,10 +167,14 @@
             <!-- Right: Wind, Zoom, Mute -->
             <div class="hud-right">
                 <div id="wind-indicator">
-                    <span class="wind-label">Wind</span>
-                    <div class="wind-bar">
-                        <div id="wind-arrow"></div>
+                    <span class="wind-icon">💨</span>
+                    <div class="wind-meter">
+                        <div class="wind-left"></div>
+                        <div class="wind-center"></div>
+                        <div class="wind-right"></div>
+                        <div id="wind-fill"></div>
                     </div>
+                    <span id="wind-value">0</span>
                 </div>
                 <div id="zoom-indicator">
                     <span id="zoom-level">100%</span>
