Add Blowtorch weapon - Worms-style meter-based digging tool

--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
             <div class="weapon" data-weapon="holygrenade" title="Holy Hand Grenade">
                 <img src="assets/weapon_holygrenade.png" alt="Holy Grenade">
             </div>
+            <div class="weapon" data-weapon="blowtorch" title="Blowtorch">
+                <img src="assets/weapon_blowtorch.png" alt="Blowtorch">
+            </div>
         </div>
 
         <!-- Power Bar -->
